--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index"
+    "dev": "nodemon src/index",
+    "start": "node src/index",
+    "port": "sudo chmod a+rw /dev/ttyACM0"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +19,12 @@
     "express-handlebars": "^5.2.1",
     "express-mysql-session": "^2.1.5",
     "express-session": "^1.17.1",
+    "johnny-five": "^2.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
